# bracket-city-mcp

./: README.md  cleanup_intermediate_files.py  finalize_and_cleanup.py  id_mapping.py  parsed_json_data.py  process_clues.py  process_json_for_description_updates.py  pyproject.toml  update_clue_descriptions.py  update_clue_keys.py  update_dependencies.py  write_final_json.py
examples/: demo_mcp.py  play_game.py
games/json/: 20250110.json
games/raw/: 20250510.md
scripts/: parse_game.py
src/bracket_city_mcp/: __init__.py  main.py
src/bracket_city_mcp/game/: clue.py  game.py
tests/: test_bracket_city_mcp.py  test_clue.py  test_game.py  test_main.py
tests/data/: invalid_multiple_end_clues_game.json  test_game.json  valid_single_end_clue_game.json
