[project]
name = "bracket-city-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "pip>=25.1.1",
    "pytest>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# The [project.scripts] section is now gone

[tool.pytest.ini_options]
asyncio_mode = "auto"
